@@ -1,14 +1,0 @@
-# $Id$
-# Joomla! Project
-# Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.
-# License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-# Note : All ini files need to be saved as UTF-8 - No BOM
-
-ATTEMPT LEGACY SEF=Attempt Legacy SEF
-IF YES, IT SEARCHES FOR OLD QUERY STRINGS THAT MIGHT MATCH AND REDIRECTS=If <strong>Yes</strong> is selected, the system will search for old Query Strings that might match and then redirects to it.
-IF YES, IT USES OLD STYLE SEF AND ATTEMPTS TO GENERATE A VALID LINK=If <strong>Yes</strong> is selected, the system will use the old style SEF format and will attempt to generate a valid link.
-IF YES, IT USES OLD STYLE SEF AND DIRECTS IT TO THE NEW LINK=If <strong>Yes</strong> is selected, the system will use the old style SEF format and will redirect to the new link.
-PROVIDES BACKLINK SUPPORT=The Backlink Plugin provides support for legacy Joomla 1.0.x links. It redirects old style URLs and document links to the correct Joomla 1.5 targets.
-SEARCH QUERY STRINGS=Search Query Strings
-SEARCH SEF=Search SEF
-"%s" HAS MOVED TO <a href="%s">%s</a>. CLICK THE LINK IF YOUR BROWSER DOES NOT REDIRECT YOU AUTOMATICALLY.="%s" has moved to <a href="%s">%s</a>. Click the link if your browser does not automatically redirect you.
